--- a/CG_evaluation.ipynb
+++ b/CG_evaluation.ipynb
@@ -3,43 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "011547ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#save and load simulations\n",
-    "#martinize posres erhöhen?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "id": "931c1fd7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "\n",
     "import encodermap as em\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mat\n",
-    "#import gromacs\n",
     "import glob2 as glob\n",
     "import os\n",
     "import sys\n",
     "import pickle\n",
     "import math\n",
     "import subprocess\n",
-    "import seaborn\n",
-    "import pandas as pd\n",
-    "import random\n",
     "import matplotlib.cm as cm\n",
     "import pyemma.plots as mplt\n",
-    "import scipy as sp\n",
     "sys.path.insert(1, \"/home/nicolas.schneider/nicolas/master_thesis/backward-v5\")\n",
-    "from collections import defaultdict\n",
-    "import pprint\n",
     "sys.path.insert(1, '/home/nicolas.schneider/soft/running_rabbit')\n",
     "\n",
     "\n",
@@ -50,32 +30,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a32f35b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%autoreload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "4b19c05d",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['nacl_iso_neutral', 'ASP_10', 'cluster_19']\n",
-      "['nacl_iso_neutral', 'ASP_10', 'cluster_3']\n",
-      "['nacl_iso_neutral', 'ASP_10', 'cluster_4']\n",
-      "['nacl_iso_neutral', 'ASP_10', 'cluster_5']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cg_simulation_dir = \"/home/nicolas.schneider/nicolas/master_thesis/CG_sim\"  ##folder where the cg simulation data is stored\n",
     "Cluster_sim.sel_charges = [\"nacl_iso_charged/\"]  #subfolders in which simulations will be searched\n",
@@ -95,15 +54,11 @@
     "\n",
     "Cluster_sim.cg_sim_list = []\n",
     "for folder in folders:\n",
-    "    print(folder)\n",
-    "    #try:\n",
     "    Cluster_sim.cg_sim_list.append(Cluster_sim(\"CG_sim\", *folder))\n",
-    "    #except:\n",
-    "    #    print(\"exception :\", *folder)\n",
     "    \n",
     "Cluster_sim.evaluation_data_spec_directory = Cluster_sim.evaluation_data_base_directory\n",
     "    \n",
-    "    #creating evaluation data directory based on the different systems it contains\n",
+    "    #determining evaluation data directory string based on the combination of systems it contains\n",
     "attrs = [\"sim_type_folder\", \"charge_folder\", \"peptide_folder\"]\n",
     "for attr in attrs:\n",
     "    sim_attr = [getattr(o, attr) for o in Cluster_sim.cg_sim_list]\n",
@@ -119,29 +74,9 @@
     "    \n",
     "for sim in Cluster_sim.cg_sim_list:\n",
     "    sim.gen_pair_dist_ts(Cluster_sim.descriptor_selection, sample_frames = len(sim.universe.trajectory))\n",
-    "    #sim.save_evaluation_data(Cluster_sim.evaluation_data_spec_directory + sim.cluster_folder)\n",
     "\n",
     "Cluster_sim.high_d_data_concat_cg, Cluster_sim.frame_dict_concat_cg = Cluster_sim.concatenate_high_d_data(Cluster_sim.cg_sim_list)\n",
-    "#high_d_data_concat_norm_cg = Cluster_sim.norm_high_d_data(high_d_data_concat_cg)[0]\n",
-    "#Cluster_sim.save_evaluation_data(Cluster_sim, Cluster_sim.evaluation_data_spec_directory)\n",
-    "\n",
-    "#print(Cluster_sim.evaluation_data_spec_directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b51c8a04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def_parameters = em.Parameters()\n",
-    "print(\"default parameters:\")\n",
-    "print(\"center_cost_scale: \", def_parameters.center_cost_scale)\n",
-    "print(\"auto_cost_scale: \", def_parameters.auto_cost_scale)\n",
-    "print(\"distance_cost_scale: \", def_parameters.distance_cost_scale)\n",
-    "print(\"l2_reg_constant: \", def_parameters.l2_reg_constant)\n",
-    "print(\"learning_rate: \", def_parameters.learning_rate)"
+    "#high_d_data_concat_norm_cg = Cluster_sim.norm_high_d_data(high_d_data_concat_cg)[0]"
    ]
   },
   {
@@ -151,10 +86,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#calculate e2e distances of the cg systems\n",
     "e2e_dist_ts_concat_cg = []\n",
     "\n",
     "for sim in Cluster_sim.cg_sim_list:\n",
     "    e2e_dist_ts_concat_cg += sim.gen_end2end_dist_ts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b51c8a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#show default em parameters\n",
+    "def_parameters = em.Parameters()\n",
+    "print(\"default parameters:\")\n",
+    "print(\"center_cost_scale: \", def_parameters.center_cost_scale)\n",
+    "print(\"auto_cost_scale: \", def_parameters.auto_cost_scale)\n",
+    "print(\"distance_cost_scale: \", def_parameters.distance_cost_scale)\n",
+    "print(\"l2_reg_constant: \", def_parameters.l2_reg_constant)\n",
+    "print(\"learning_rate: \", def_parameters.learning_rate)"
    ]
   },
   {
@@ -187,13 +140,6 @@
     "parameters.distance_cost_scale = 27.\n",
     "parameters.summary_step = max(1, parameters.n_steps/100)\n",
     "parameters.checkpoint_step = 20\n",
-    "\n",
-    "print(parameters.main_path)\n",
-    "\n",
-    "\n",
-    "#Cluster_sim.save_evaluation_data(Cluster_sim, parameters.main_path + \"/evaluation_data/\")\n",
-    "    \n",
-    "\n",
     "        \n",
     "# if your data set is large you should not try to calculate \n",
     "# the pairwise distance histogram with the complete data. \n",
@@ -237,14 +183,6 @@
    "source": [
     "#closing tensorboard\n",
     "process.terminate()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d9eb6d9",
-   "metadata": {},
-   "source": [
-    "%pwd"
    ]
   },
   {
@@ -303,18 +241,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1f31b0",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "vars(Cluster_sim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "84d29c44",
    "metadata": {},
    "outputs": [],
@@ -323,14 +249,6 @@
     "obj_name = \"ASP10_neutral_1\" + \".pickle\"\n",
     "Cluster_sim.save_state(os.path.join(\"/home/nicolas.schneider/nicolas/master_thesis/serialized_objects/\", obj_name))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a93662f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
